--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,4 @@
-@import url('/fonts/fonts.css');
+@import url('fonts/fonts.css');
 
 :root{
     --color-primario: #fff;
@@ -13,20 +13,19 @@
     margin: 0;
     padding: 0;
 }
-
-html,body{
-    margin: 0;
-    padding: 0;
-    height: 100%;
+html {
+    box-sizing: border-box;
     width: 100%;
+    height: 100%;
 }
 
-.contenedor {
+.content {
     position: relative;
     width: 100%;
     height: 100%;
     background-color: var(--color-secundario) ;
     box-sizing: border-box;
+    
 }
 
 .logo_container{
@@ -256,7 +255,7 @@ html,body{
 }
 
 @media (max-width: 57.5em ){
-    .contenedor {
+    .content{
         display: flex;
         flex-direction:column;
     }
